--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,14 @@
+# === PERMISOS DE CORS PARA VERCIEL ===
+Header set Access-Control-Allow-Origin "https://demo-catalogo-digital-pedidos-wsp-f.vercel.app"
+Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+Header set Access-Control-Allow-Headers "Content-Type, Authorization"
+
+# === CONFIGURACIÓN DE REESCRITURA ===
 RewriteEngine On
 RewriteBase /
 
 # Bloquear acceso al archivo .env
-
 <FilesMatch "^\.env$">
 Order allow,deny
 Deny from all
 </FilesMatch>
-
-# O puedes usar esta otra forma de bloquear acceso al .env
-
-# RewriteRule ^\.env$ - [F,L]
-
-# Manejar rutas generales de tu aplicación
-
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ /index.html [L]
