--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=75.102.22.152
+DB_HOST=mysql.railway.internal
 DB_PORT=3306
-DB_NAME=catalogo_ventas1
-DB_USER=catalogo_tienda
-DB_PASS=catalogoventas
-RUTA_WEB =https://tienda.catalogosco.top/
+DB_NAME=railway
+DB_USER=root
+DB_PASS=zFWjRTaPHFXUthpYiPoJqRMXeHgKivlE
+RUTA_WEB =https://demo-catalogo-digital-pedidos-wsp-f.vercel.app/
