--- a/.htaccess
+++ b/.htaccess
@@ -1,26 +1,17 @@
 # Empezar desde la imagen oficial de PHP 8.1 con Apache
 FROM php:8.1-apache
+# === PERMISOS DE CORS PARA VERCIEL ===
+Header set Access-Control-Allow-Origin "https://demo-catalogo-digital-pedidos-wsp-f.vercel.app"
+Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+Header set Access-Control-Allow-Headers "Content-Type, Authorization"
 
-# Instalar las extensiones de PHP que tu app probablemente necesita (MySQL)
-# y herramientas como git y zip.
-RUN apt-get update && apt-get install -y \
-    git \
-    zip \
-    unzip \
-&& docker-php-ext-install pdo pdo_mysql
+# === CONFIGURACIÓN DE REESCRITURA ===
+RewriteEngine On
+RewriteBase /
+Options -Indexes
 
-# Instalar Composer (el manejador de paquetes de PHP)
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
-# Copiar todos los archivos de tu proyecto al directorio web de Apache
-COPY . /var/www/html/
-
-# Movernos a ese directorio
-WORKDIR /var/www/html
-
-# Correr composer install para descargar "phpdotenv" (de tu composer.json)
-RUN composer install --no-dev --optimize-autoloader
-
-# Habilitar mod_rewrite (para URL amigables) Y mod_headers (PARA CORS)
-RUN a2enmod rewrite
-RUN a2enmod headers
+# Bloquear acceso al archivo .env
+<FilesMatch "^\.env$">
+Order allow,deny
+Deny from all
+</FilesMatch>
