--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=mysql.railway.internal
+DB_HOST=mysql://root:zFWjRTaPHFXUthpYiPoJqRMXeHgKivlE@yamanote.proxy.rlwy.net:26175/railway
 DB_PORT=3306
 DB_NAME=railway
 DB_USER=root
