--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=mysql://root:zFWjRTaPHFXUthpYiPoJqRMXeHgKivlE@mysql.railway.internal:3306/railway
+DB_HOST=yamanote.proxy.rlwy.net
 DB_PORT=3306
 DB_NAME=railway
 DB_USER=root
