--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=yamanote.proxy.rlwy.net
-DB_PORT=3306
+DB_PORT=26175
 DB_NAME=railway
 DB_USER=root
 DB_PASS=zFWjRTaPHFXUthpYiPoJqRMXeHgKivlE
-RUTA_WEB =https://demo-catalogo-digital-pedidos-wsp-f.vercel.app/
+RUTA_WEB =https://demo-catalogo-digital-pedidos-wsp-backend.onrender.com/
