--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=yamanote.proxy.rlwy.net
+DB_HOST=mysql://root:zFWjRTaPHFXUthpYiPoJqRMXeHgKivlE@yamanote.proxy.rlwy.net
 DB_PORT=26175
 DB_NAME=railway
 DB_USER=root
